--- a/index.html
+++ b/index.html
@@ -2,18 +2,25 @@
 <html>
 	<head>
 		<script src="graph.js"></script>
+    <style>
+      canvas {
+        vertical-align: top;
+        border: 1px solid black;
+      }
+    </style>
 	</head>
 	<body>
-		<canvas id="canvas" style="border: 1px solid black" width="500" height="500"></canvas>
-
+		<canvas id="canvas" width="500" height="500"></canvas>
+		<canvas id="canvas2" width="500" height="500"></canvas>
 	</body>
-	<script>
-		var canvas = document.getElementById('canvas');
+  <script src="app.js"></script>
+  <script>
+		var canvas = document.getElementById('canvas2');
 		var ctx = canvas.getContext('2d');
 
 		var graph = new Graph(ctx, -4, 4, -10, 20, 560, 420);
 		graph.drawGrid(1, 0.2, 5, 1).drawAxes();
 		var points = graph.generatePoints('x*x', 100);
-		graph.plot({ points: points, line: true, dots: false, color: 'red' });
+		graph.plot({ points: points, line: false, dots: true, color: 'red' });
 	</script>
 </html>
