added runCycle call to addFunction scale preserving current center point
renamed centerCoord to centralizeCoord (fix typo)
centerCoord is now a getter that returns current center coordinates

--- a/examples/gui.html
+++ b/examples/gui.html
@@ -33,7 +33,7 @@
       const runCycle = plotter.runCycle.bind(plotter);
 
       resizeCanvas();
-      plotter.centerCoord(0, 0);
+      plotter.centralizeCoord(0, 0);
 
       var gui = new dat.GUI();
       gui.add(func, 'line').onChange(runCycle);
